# ELI_v2.0

./: .capability_snapshot.json  .code_monitor_state.json  .coveragerc  .env.example  .env.full.example  .gitattributes  .gitignore  .repomixignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ELI.spec  LICENSE  MANIFEST.in  NOTICE  Pasted text.txt  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UNINSTALL.bat  WHAT_ELI_IS.md  build_packages.sh  capability_inventory.generated.json  capability_manifest.json  conftest.py  eli-mkxi.desktop  eli-v2.0.desktop  eli.bat  eli.sh  eli_diagnose.sh  eli_s11_diag.sh  eli_s11_gap.sh  eli_s11_rootcause.sh  install.bat  install.ps1  install.sh  matrix_probe_note.md  patch_s11_bugs.py  pyproject.toml  pytest.ini  (+20 more)
.artifacts_legacy_20260429/: user_info.meta.json  user_info.txt
.github/: FUNDING.yml
Install instructions/: ELI_MKXI_Full_Instructions.docx
api/: api_token.py  server.py  server.py.orig
artifacts/: README.md
blueprints/: ELI_USER_MANUAL.md  ELI_USER_MANUAL.txt  README.md  adaptive_inference_governor.md  agent_algorithms.md  agent_bus.md  architecture.md  architecture_ascii.md  background_tasks.md  build_blueprint_pdf.py  build_capabilities_pdf.py  build_manual_pdf.py  capabilities_and_actions.md  capability_catalogue.md  code_mode_execution_layer.md  coding_agent.md  coding_agent_test_prompts.md  common_errors_and_fixes.md  complete_findings.md  coverage_increase_analysis.md  cross_platform_smoke_test.md  dag.md  dag_orchestrator.md  decomposition_plan.md  diagrams.md  eli_launch_package.tex  eli_marketing_and_outreach_playbook.md  eval_harness.md  executor_decomposition.md  grounding_and_evidence.md  gui.md  inference_and_hardware.md  installation.md  launch_readiness_v2.md  learning.md  lora_pipeline.md  marketing proposals to threads_boards.odt  memory.md  model_bakeoff_dossier.md  operations.md  (+17 more)
config/: plugins_state.json  pomodoro.json  quick_actions.json  settings.example.json  settings.json
docs/: COVERAGE.md  CROSS_PLATFORM.md  FIRST_RUN.md  MODEL_LAYOUT_ELI_v2_0.txt  MODEL_LAYOUT_MKXI.txt  PUBLIC_LAUNCH.md  RELEASE_PIPELINE.md  SERVER_AND_WEB_APP.md  TRAINING_YOUR_OWN_MODEL.md  model_runtime_policy.md
eli/: __main__.py  api.py  capability_inventory.generated.json  capability_manifest.json
generated_documents/: runtime_audit_report.txt
models/: MODEL_LICENSES.md  README.txt  extract_training_data.py  extract_training_data_7b.py  extract_training_data_phi3.py  train_lora_7b.py  train_lora_7b_optimized.py  train_phi3.py
ops/: eli_runtime_config.py  init_portable_config.py  install_image_diffusion_model.py
packaging/: VOICE_LICENSE_REVIEW.md  runtime_asset_manifest.json
requirements/: README_ELI_ENVIRONMENT.md
scripts/: asset_release_policy.py  backfill_learning_tracking.py  build_grandma_release.sh  build_v2_release.sh  coverage_full.sh  create_github_asset_archives.sh  eli_bt_reset.sh  eli_launch.sh  eli_one_click_run.sh  eli_one_click_setup.sh  eli_piper_speak.py  eli_serve.ps1  eli_serve.sh  eli_setup.sh  eli_startup.sh  eli_term.sh  eli_uninstall.sh  generate_blueprint_pdfs.sh  generate_branding_icons.py  generate_new_user_guide_pdf.sh  github_asset_manifest.py  install_android.sh  install_desktop_apps.ps1  install_desktop_apps.sh  install_eli.sh  install_eli_command.sh  migrate_prints_to_logger.py  package_desktop_app.sh  package_eli_release.sh  pandoc_pdf_glyphs.lua  purge_legacy_eli.sh  rebuild_vector_index.py  restore_github_asset_files.py  restore_github_assets.sh  run_eli_repo_venv.sh  safe_install_linux.sh  sync_build.sh  uninstall.ps1  upload_github_asset_files.py  upload_github_assets.sh
tests/: conftest.py  generate_router_cases.py  router_test_data.json  test_00_imports.py  test_01_core.py  test_01_paths.py  test_02_config.py  test_02_memory.py  test_03_cognition.py  test_03_memory.py  test_04_execution.py  test_04_router.py  test_05_executor.py  test_05_planning.py  test_06_agent_bus.py  test_06_runtime.py  test_07_output_governor.py  test_07_plugins.py  test_08_hardware.py  test_08_kernel.py  test_09_cognitive_engine.py  test_09_perception.py  test_10_end_to_end.py  test_10_tools.py  test_11_integration.py  test_12_filesystem.py  test_action_commitment.py  test_agent_depth.py  test_agent_dispatch_persist.py  test_api_rbac.py  test_api_security.py  test_api_server.py  test_api_token.py  test_approval_engine.py  test_asset_restore_flat.py  test_audio_sink_resolution.py  test_audit_ledger.py  test_background.py  test_bluetooth_control.py  (+176 more)
tools/: clear_memory.py  (+13 more)
(+784 files in other folders)
